--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "express": "^4.14.1",
     "express-jwt": "^5.1.0"
   },
-  "devDependencies": {},    
+  "devDependencies": {
+    "nodemon": "^1.11.0"
+  },  
+  "scripts": {
+    "dev": "nodemon server.js"
+  },
   "author": "Ody Bros",
-  "license": "ISC"  
+  "license": "ISC"
 }
